# rabbitmq-stream-sample-producer

./: Cargo.toml
src/: main.rs
