[package]
name = "rabbitmq-stream-sample-producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rabbitmq-stream-client = "*"
model = { path = "../rdkafka-sample-model" }
bincode = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
